--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -40,7 +40,7 @@ $black: #2b2523
   background-position: bottom
   display: flex
   justify-content: center
-  align-items: center
+  align-items: top
 
 .full-width-image
     width: 100vw
