--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,22 +1,22 @@
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
 @font-face {
-  font-family: 'GothamPro Medium';  
-  src: url('./fonts/GothamPro-Medium.ttf') format('truetype');       
+  font-family: 'GothamPro Medium';
+  src: url('./fonts/GothamPro-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GothamPro';  
-  src: url('./fonts/GothamPro.ttf') format('truetype');       
+  font-family: 'GothamPro';
+  src: url('./fonts/GothamPro.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GothamPro Light';  
-  src: url('./fonts/GothamPro-Light.ttf') format('truetype');       
+  font-family: 'GothamPro Light';
+  src: url('./fonts/GothamPro-Light.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -53,11 +53,18 @@ a:hover {
   color: #A60424;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: normal;
   font-family: "GothamPro Medium";
 }
 
-b, strong {
+b,
+strong {
   font-family: "GothamPro Medium";
+}
+
+figure {
+  margin: 0;
 }
